# aoc24-codspeed

./: Cargo.toml
benches/: my_benchmark.rs
src/: day5.rs  lib.rs
