[package]
name = "aoc24-codspeed"
version = "0.1.0"
edition = "2021"

[lib]
bench = false

[dependencies]
anyhow = "1.0.94"
aoc-runner = "0.3"
aoc-runner-derive = "0.3"
fxhash = "0.2.1"

[dev-dependencies]
criterion = { version = "2.7.2", package = "codspeed-criterion-compat" }

[[bench]]
name = "my_benchmark"
harness = false
